# GraphReactApp

./: .env.example  .gitignore  .replit  README.md  package-lock.json  package.json  pyproject.toml  replit.nix  requirements.txt  run.py  theme.json
attached_assets/: Pasted-The-above-error-occurred-in-the-Dashboard-component-at-Dashboard-https-93a84767-ad42-475c-1744738464226.txt  Pasted-The-above-error-occurred-in-the-Dashboard-component-at-Dashboard-https-93a84767-ad42-475c-1744739162749.txt  Pasted-The-above-error-occurred-in-the-FileUpload-component-at-FileUpload-https-93a84767-ad42-47-1744737863943.txt  Pasted-The-above-error-occurred-in-the-Layout-component-at-Layout-https-93a84767-ad42-475c-abc2--1744739079784.txt  Pasted-The-above-error-occurred-in-the-NavLinks-component-at-NavLinks-https-d0fe1383-451a-4735-a-1744811919845.txt
client/src/: App.tsx  index.css
client/src/components/: DatabaseConfig.tsx  FileUpload.tsx  GraphVisualization.tsx  Layout.tsx  QueryInput.tsx  ResponseDisplay.tsx
client/src/hooks/: use-theme.ts
client/src/lib/: api.ts
client/src/pages/: Dashboard.tsx  History.tsx  Home.tsx  Login.tsx  QueryPage.tsx  Register.tsx  Settings.tsx  UploadPage.tsx
client/src/types/: graph.ts  index.ts
server/: app.py  auth.py  config.py  document_processor.py  graph_db.py  index.ts  knowledge_graph_service.py  llm_service.py  models.py  routes.py  routes.ts  storage.ts  utils.py  vite.ts
shared/: schema.ts
